# Hyde

./: CMakeLists.txt  vcpkg.json
hyde/src/: main.cpp
lib/: CMakeLists.txt
lib/TriStripper/: CMakeLists.txt
lib/TriStripper/lib/: TriStripperd.lib
lib/bStream/: bstream.h
libj3dconv/include/: envelope.hpp  j3dconv.hpp  j3denum.hpp  jutnametab.hpp  object.hpp  shape.hpp  skeleton.hpp  texture.hpp  types.hpp  util.hpp  vertex.hpp
libj3dconv/src/: envelope.cpp  j3dconv.cpp  jutnametab.cpp  object.cpp  shape.cpp  skeleton.cpp  texture.cpp  util.cpp  vertex.cpp
